--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,17 +3,9 @@
 
     <data>
         <variable
-            name="mainPage"
-            type="com.sharehands.sharehands_frontend.model.home.MainPage" />
-        <variable
-            name="suggestion"
-            type="com.sharehands.sharehands_frontend.model.home.SuggestionData" />
-        <variable
-            name="popular"
-            type="com.sharehands.sharehands_frontend.model.home.Popular" />
-        <variable
-            name="userRanking"
-            type="com.sharehands.sharehands_frontend.model.home.UserRanking" />
+            name="viewModel"
+            type="com.sharehands.sharehands_frontend.viewmodel.home.HomeViewModel" />
+
     </data>
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -76,6 +68,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/tv_alarm"
                     android:layout_width="16dp"
                     android:layout_height="16dp"
                     android:background="@drawable/ic_alert_num"
@@ -85,8 +78,9 @@
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:textSize="10sp"
-                    android:layout_marginTop="-2dp"
-                    android:layout_marginEnd="-2dp"
+                    android:text="@{viewModel.invitationNum}"
+                    android:layout_marginTop="-6dp"
+                    android:layout_marginEnd="-6dp"
                     android:gravity="center_vertical|center_horizontal" />
 
                 <ImageView
@@ -124,7 +118,8 @@
                     android:textColor="@color/text_color"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    tools:text="유저" />
+                    tools:text="유저"
+                    android:text="@{viewModel.nickname}"/>
 
                 <TextView
                     android:id="@+id/tv_sir"
@@ -167,8 +162,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="28dp"
-                    android:text="@string/hot_services"
-                    android:textSize="16sp"
+                    android:text="  이번 주 인기 봉사"
+                    android:textSize="20sp"
+                    android:drawableStart="@drawable/ic_hot"
                     android:textStyle="bold"
                     android:textColor="@color/text_color"
                     app:layout_constraintStart_toStartOf="parent"
@@ -193,8 +189,9 @@
                     app:layout_constraintTop_toBottomOf="@id/rv_hot_service"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="28dp"
-                    android:text="봉사 랭킹"
-                    android:textSize="16sp"
+                    android:text="  봉사 랭킹"
+                    android:textSize="20sp"
+                    android:drawableStart="@drawable/ic_thumbs"
                     android:textColor="@color/text_color"
                     android:textStyle="bold"/>
 
@@ -205,7 +202,7 @@
                     app:layout_constraintTop_toBottomOf="@id/tv_ranking_service"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    android:layout_marginTop="12dp"
+                    android:layout_marginTop="24dp"
                     android:layout_marginStart="24dp"
                     android:layout_marginEnd="24dp"/>
 
