--- a/app/src/main/res/layout/item_service_ranking.xml
+++ b/app/src/main/res/layout/item_service_ranking.xml
@@ -1,113 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:elevation="40dp"
-    android:orientation="vertical"
-    android:background="@drawable/rectangle_shadow_rad40">
+<layout>
+    <data>
+        <variable
+            name="popular"
+            type="com.sharehands.sharehands_frontend.network.home.PopularItem" />
+    </data>
 
-    <LinearLayout
-        android:id="@+id/layout_service_ranking"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="52dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:gravity="center">
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="200dp"
+        android:layout_height="220dp"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:elevation="40dp"
+        android:orientation="vertical"
+        android:background="@drawable/rectangle_shadow_rad40">
 
-        <ImageView
-            android:id="@+id/iv_ranking"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            tools:src="@drawable/ic_rank_first" />
+        <LinearLayout
+            android:id="@+id/layout_service_ranking"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:gravity="center">
+
+            <ImageView
+                android:id="@+id/iv_ranking"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                tools:src="@drawable/ic_rank_first" />
+
+            <TextView
+                android:id="@+id/tv_ranking_num"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                tools:text="1"
+                android:text="@{Long.toString(popular.ranking)}"
+                android:textStyle="bold"
+                android:textColor="@color/text_color"
+                android:layout_marginStart="12dp" />
+
+            <TextView
+                android:id="@+id/tv_ranking"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="24sp"
+                android:text="위"
+                android:textStyle="bold"
+                android:textColor="@color/text_color" />
+
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_ranking_num"
-            android:layout_width="wrap_content"
+            android:id="@+id/tv_nickname"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="40sp"
-            tools:text="1"
-            android:textStyle="bold"
+            tools:text="봉사명"
+            app:layout_constraintTop_toBottomOf="@id/layout_service_ranking"
+            android:layout_marginStart="20dp"
+            android:layout_marginEnd="20dp"
+            android:gravity="center"
+            android:layout_marginTop="8dp"
+            android:textSize="20sp"
+            android:text="@{popular.title}"
             android:textColor="@color/text_color"
-            android:layout_marginStart="12dp" />
+            android:textStyle="bold"
+            android:layout_gravity="center"/>
 
         <TextView
-            android:id="@+id/tv_ranking"
+            android:id="@+id/tv_views"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="40sp"
-            android:text="위"
+            android:drawableStart="@drawable/ic_eye"
+            tools:text="조회수"
+            android:text="@{Long.toString(popular.views)}"
             android:textStyle="bold"
-            android:textColor="@color/text_color" />
+            android:textColor="@color/sharehands_green_strong"
+            android:autoSizeMaxTextSize="20sp"
+            android:drawablePadding="8dip"
+            android:textSize="12sp"
+            android:layout_gravity="center"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_nickname"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/tv_likes"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_like_filled"
+            tools:text="좋아요 수"
+            app:layout_constraintTop_toBottomOf="@id/tv_views"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:text="@{Long.toString(popular.likes)}"
+            android:layout_gravity="center"
+            android:layout_marginTop="2dp"
+            android:textStyle="bold"
+            android:textColor="@color/sharehands_green_strong"
+            android:autoSizeMaxTextSize="20sp"
+            android:drawablePadding="8dip"
+            android:textSize="12sp"
+            />
 
-    <TextView
-        android:id="@+id/tv_nickname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="봉사명"
-        android:layout_marginTop="20dp"
-        android:textSize="40sp"
-        android:textColor="@color/text_color"
-        android:textStyle="bold"
-        android:layout_gravity="center"/>
+        <TextView
+            android:id="@+id/tv_scraps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_scrap_filled"
+            tools:text="스크랩 수"
+            android:text="@{Long.toString(popular.scraps)}"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textColor="@color/sharehands_green_strong"
+            android:autoSizeMaxTextSize="20sp"
+            android:drawablePadding="8dip"
+            android:textSize="12sp"
+            android:layout_marginTop="2dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_likes"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            />
 
-    <TextView
-        android:id="@+id/tv_views"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_eye"
-        tools:text="조회수"
-        android:textStyle="bold"
-        android:textColor="@color/sharehands_green_strong"
-        android:autoSizeMaxTextSize="20sp"
-        android:drawablePadding="8dip"
-        android:textSize="28sp"
-        android:layout_gravity="center"
-        android:layout_marginTop="28dp"
-        />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-
-    <TextView
-        android:id="@+id/tv_likes"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_like_filled"
-        tools:text="좋아요 수"
-        android:layout_gravity="center"
-        android:layout_marginTop="2dp"
-        android:textStyle="bold"
-        android:textColor="@color/sharehands_green_strong"
-        android:autoSizeMaxTextSize="20sp"
-        android:drawablePadding="8dip"
-        android:textSize="28sp"
-        />
-
-    <TextView
-        android:id="@+id/tv_scraps"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:drawableStart="@drawable/ic_scrap_filled"
-        tools:text="스크랩 수"
-        android:layout_gravity="center"
-        android:textStyle="bold"
-        android:textColor="@color/sharehands_green_strong"
-        android:autoSizeMaxTextSize="20sp"
-        android:drawablePadding="8dip"
-        android:textSize="28sp"
-        android:layout_marginTop="2dp"
-        android:layout_marginBottom="52dp"
-        />
-
-
-
-
-
-
-</LinearLayout>
+</layout>
