--- a/app/src/main/res/layout/item_user_ranking.xml
+++ b/app/src/main/res/layout/item_user_ranking.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="userRanking"
             type="com.sharehands.sharehands_frontend.network.home.RankingItem" />
     </data>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    <LinearLayout
+        android:layout_width="160dp"
+        android:layout_height="180dp"
         android:elevation="40dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
         android:orientation="vertical"
         android:background="@drawable/rectangle_shadow_rad40">
 
@@ -20,7 +23,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="52dp"
+            android:layout_marginTop="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -28,17 +31,16 @@
 
             <ImageView
                 android:id="@+id/iv_ranking"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 tools:src="@drawable/ic_rank_first" />
 
             <TextView
                 android:id="@+id/tv_ranking_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40sp"
+                android:textSize="20sp"
                 tools:text="1"
-                android:text="@{Long.toString(userRanking.ranking)}"
                 android:textStyle="bold"
                 android:textColor="@color/text_color"
                 android:layout_marginStart="12dp" />
@@ -47,7 +49,7 @@
                 android:id="@+id/tv_ranking"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="40sp"
+                android:textSize="20sp"
                 android:text="위"
                 android:textStyle="bold"
                 android:textColor="@color/text_color" />
@@ -59,33 +61,32 @@
             android:id="@+id/tv_nickname"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:text="닉네임"
-            android:text="@{userRanking.nickname}"
+            android:layout_gravity="center"
             android:layout_marginStart="20dp"
+            android:layout_marginTop="6dp"
             android:layout_marginEnd="20dp"
             android:gravity="center"
-            android:layout_marginTop="20dp"
-            android:textSize="36sp"
             android:maxLines="1"
             android:textColor="@color/text_color"
+            android:textSize="20sp"
             android:textStyle="bold"
-            android:layout_gravity="center"/>
+            tools:text="닉네임" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center"
-            android:layout_marginTop="8dp">
+            android:layout_marginTop="6dp">
             <TextView
                 android:id="@+id/tv_user_level"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="나눔레벨"
+                android:text="나눔레벨"
                 android:textStyle="bold"
                 android:textColor="@color/sharehands_green_strong"
                 android:autoSizeMaxTextSize="20sp"
-                android:textSize="36sp"
+                android:textSize="16sp"
                 android:layout_gravity="center" />
 
             <TextView
@@ -93,8 +94,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="1"
-                android:text="@{Long.toString(userRanking.level)}"
-                android:textSize="36sp"
+                android:textSize="16sp"
                 android:textColor="@color/sharehands_green_strong"
                 android:textStyle="bold"
                 android:layout_marginStart="4dp" />
@@ -102,19 +102,17 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_scraps"
+            android:id="@+id/tv_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="xx회"
-            android:text="@{Long.toString(userRanking.count)+`회`}"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textColor="#F44336"
             android:autoSizeMaxTextSize="20sp"
             android:drawablePadding="8dip"
-            android:textSize="36sp"
-            android:layout_marginTop="28dp"
-            android:layout_marginBottom="52dp"
+            android:textSize="16sp"
+            android:layout_marginTop="6dp"
             />
 
     </LinearLayout>
