--- a/app/src/main/res/layout/activity_monthly_calendar.xml
+++ b/app/src/main/res/layout/activity_monthly_calendar.xml
@@ -173,12 +173,14 @@
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rv_schedules"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginEnd="20dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/layout_view_detail"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_marginBottom="20dp"
                     app:layout_constraintEnd_toEndOf="parent" />
 
 
