--- a/app/src/main/res/layout/item_service_ranking.xml
+++ b/app/src/main/res/layout/item_service_ranking.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="popular"
@@ -7,11 +7,12 @@
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:layout_width="200dp"
-        android:layout_height="220dp"
+        android:layout_width="136dp"
+        android:layout_height="160dp"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:elevation="40dp"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="6dp"
         android:orientation="vertical"
         android:background="@drawable/rectangle_shadow_rad40">
 
@@ -28,17 +29,16 @@
 
             <ImageView
                 android:id="@+id/iv_ranking"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 tools:src="@drawable/ic_rank_first" />
 
             <TextView
                 android:id="@+id/tv_ranking_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
+                android:textSize="16sp"
                 tools:text="1"
-                android:text="@{Long.toString(popular.ranking)}"
                 android:textStyle="bold"
                 android:textColor="@color/text_color"
                 android:layout_marginStart="12dp" />
@@ -47,7 +47,7 @@
                 android:id="@+id/tv_ranking"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="24sp"
+                android:textSize="16sp"
                 android:text="위"
                 android:textStyle="bold"
                 android:textColor="@color/text_color" />
@@ -56,7 +56,7 @@
         </LinearLayout>
 
         <TextView
-            android:id="@+id/tv_nickname"
+            android:id="@+id/tv_service_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:text="봉사명"
@@ -64,9 +64,8 @@
             android:layout_marginStart="20dp"
             android:layout_marginEnd="20dp"
             android:gravity="center"
-            android:layout_marginTop="8dp"
-            android:textSize="20sp"
-            android:text="@{popular.title}"
+            android:layout_marginTop="12dp"
+            android:textSize="16sp"
             android:textColor="@color/text_color"
             android:textStyle="bold"
             android:layout_gravity="center"/>
@@ -75,34 +74,31 @@
             android:id="@+id/tv_views"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_eye"
-            tools:text="조회수"
-            android:text="@{Long.toString(popular.views)}"
             android:textStyle="bold"
             android:textColor="@color/sharehands_green_strong"
             android:autoSizeMaxTextSize="20sp"
             android:drawablePadding="8dip"
             android:textSize="12sp"
+            android:layout_marginStart="8dp"
             android:layout_gravity="center"
-            android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_nickname"
+            android:gravity="center_vertical"
+            android:layout_marginTop="16dp"
+            app:layout_constraintTop_toBottomOf="@id/tv_service_name"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintEnd_toStartOf="@id/tv_likes"
+            android:drawableStart="@drawable/ic_eye_small"/>
 
 
         <TextView
             android:id="@+id/tv_likes"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_like_filled"
-            tools:text="좋아요 수"
-            app:layout_constraintTop_toBottomOf="@id/tv_views"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:text="@{Long.toString(popular.likes)}"
+            android:drawableStart="@drawable/ic_heart_small"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toTopOf="@id/tv_views"
+            app:layout_constraintStart_toEndOf="@id/tv_views"
             android:layout_gravity="center"
-            android:layout_marginTop="2dp"
+            app:layout_constraintEnd_toStartOf="@id/tv_scraps"
             android:textStyle="bold"
             android:textColor="@color/sharehands_green_strong"
             android:autoSizeMaxTextSize="20sp"
@@ -114,18 +110,18 @@
             android:id="@+id/tv_scraps"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableStart="@drawable/ic_scrap_filled"
-            tools:text="스크랩 수"
-            android:text="@{Long.toString(popular.scraps)}"
+            android:drawableStart="@drawable/ic_scrap_small"
             android:layout_gravity="center"
             android:textStyle="bold"
             android:textColor="@color/sharehands_green_strong"
             android:autoSizeMaxTextSize="20sp"
             android:drawablePadding="8dip"
+            android:layout_marginEnd="8dp"
             android:textSize="12sp"
-            android:layout_marginTop="2dp"
-            app:layout_constraintTop_toBottomOf="@id/tv_likes"
-            app:layout_constraintStart_toStartOf="parent"
+            android:gravity="center_vertical"
+            app:layout_constraintTop_toTopOf="@id/tv_likes"
+            app:layout_constraintStart_toEndOf="@id/tv_likes"
+            app:layout_constraintBottom_toBottomOf="@id/tv_likes"
             app:layout_constraintEnd_toEndOf="parent"
             />
 
