--- a/app/src/main/res/layout/activity_terms_agree.xml
+++ b/app/src/main/res/layout/activity_terms_agree.xml
@@ -8,7 +8,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/sharehands_green_weak">
+        android:background="@color/item_color">
 
         <ImageView
             android:id="@+id/btn_back"
@@ -18,6 +18,7 @@
             android:layout_marginTop="12dp"
             android:padding="16dp"
             android:src="@drawable/ic_arrow_back"
+            app:tint="@color/text_color"
             app:layout_constraintBottom_toTopOf="@id/tv_agree_subtitle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -28,7 +29,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="28dp"
             android:text="당신의 따뜻한 마음을 응원합니다!"
-            android:textColor="@color/sharehands_black"
+            android:textColor="@color/text_color"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
@@ -43,7 +44,7 @@
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:text="쉐어핸즈 회원가입"
-            android:textColor="@color/sharehands_black"
+            android:textColor="@color/text_color"
             android:textSize="32sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/tv_check_info"
@@ -85,7 +86,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="[필수] 쉐어핸즈 이용약관 동의"
-            android:textColor="@color/sharehands_black"
+            android:textColor="@color/text_color"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/checkbox_term1_agree"
             app:layout_constraintStart_toEndOf="@id/checkbox_term1_agree"
@@ -111,7 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="[필수] 개인정보 수집 및 이용 동의"
-            android:textColor="@color/sharehands_black"
+            android:textColor="@color/text_color"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/checkbox_term2_agree"
             app:layout_constraintStart_toEndOf="@id/checkbox_term2_agree"
@@ -137,7 +138,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="[선택] 개인정보 제3자 제공 동의"
-            android:textColor="@color/sharehands_black"
+            android:textColor="@color/text_color"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/checkbox_term3_agree"
             app:layout_constraintStart_toEndOf="@id/checkbox_term3_agree"
@@ -163,7 +164,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:text="[선택] 이벤트 및 혜택 알림 수신 동의"
-            android:textColor="@color/sharehands_black"
+            android:textColor="@color/text_color"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/checkbox_term4_agree"
             app:layout_constraintStart_toEndOf="@id/checkbox_term4_agree"
