--- a/app/src/main/res/layout/dialog_add_memo.xml
+++ b/app/src/main/res/layout/dialog_add_memo.xml
@@ -11,17 +11,21 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/item_color">
+            android:layout_height="200dp">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/dialog_edit"
+                android:id="@+id/dialog_edit_memo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:hint="준비물을 입력해주세요."
+                android:hint="메모를 입력해주세요."
                 android:background="@color/item_color"
                 android:textColor="@color/text_color"
-                android:textSize="16sp"/>
+                android:gravity="top"
+                android:textSize="16sp">
+
+            </com.google.android.material.textfield.TextInputEditText>
+
+
 
         </com.google.android.material.textfield.TextInputLayout>
 
