--- a/app/src/main/res/layout/item_memo.xml
+++ b/app/src/main/res/layout/item_memo.xml
@@ -10,36 +10,34 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools">
 
-        <CheckBox
-            android:id="@+id/chk_item"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:background="@drawable/custom_checkbox"
-            android:button="@android:color/transparent"
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginBottom="16dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            />
-
         <TextView
             android:id="@+id/tv_item"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/chk_item"
-            app:layout_constraintBottom_toBottomOf="@id/chk_item"
-            app:layout_constraintStart_toEndOf="@id/chk_item"
-            app:layout_constraintEnd_toStartOf="@id/btn_delete"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/btn_edit_memo"
             android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
+            android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginBottom="16dp"
             android:textColor="@color/text_color"
             android:textSize="12sp"
-            android:textStyle="bold"
-            android:maxLines="1"
+            android:maxLines="5"
             android:ellipsize="end"
             tools:text="준비물"/>
+
+        <Button
+            android:id="@+id/btn_edit_memo"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:padding="20dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="-2dp"
+            app:layout_constraintTop_toTopOf="@id/tv_item"
+            app:layout_constraintEnd_toStartOf="@id/btn_delete"
+            android:background="@drawable/ic_baseline_edit_24"/>
 
         <Button
             android:id="@+id/btn_delete"
@@ -47,9 +45,9 @@
             android:layout_height="24dp"
             android:padding="20dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginTop="-2dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="@id/tv_item"
             android:background="@drawable/ic_baseline_delete_24"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
